# myproject

./: manage.py  pyproject.toml
myproject/: Dockerfile  forms.py  settings.py  urls.py  views.py
myproject/templates/: apply_yaml.html  confirm_delete.html  confirm_delete_deployment.html  confirm_delete_replica_set.html  create_namespaces.html  create_pods.html  deployments_list.html  edit_deployment.html  edit_pod.html  edit_replica_set.html  index.html  index3.html  list_workloads.html  namespaces_list.html  pods_list.html  register.html  replica_sets_list.html
static/css/: test.css
