[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Mohamedamr5 <133424127+Mohamedamr5@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
kubernetes = "^29.0.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
